--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
   "scripts": {
-    "beautify": "js-beautify --type html --indent-size 2 --inline i,b,strong,span html/**/*.html",
-    "browser-sync": "browser-sync start --server --startPath \"html/index.html\" --files \"**/*\" --directory --no-notify --no-open",
-    "delete:dev-folder": "del-cli --force assets/css html",
-    "prod": "npm-run-all delete:dev-folder pug:prod sass:prod beautify",
-    "pug:dev": "pug --obj pug/assets/data.json --watch pug/templates/page --out html/ --pretty",
-    "pug:prod": "pug --obj pug/assets/data.json pug/templates/page --out html/ --pretty",
+    "delete:dist": "del-cli --force dist",
+    "eleventy:dev": "npx eleventy --serve",
+    "eleventy:prod": "npx eleventy",
+    "prod": "npm-run-all delete:dev-folder eleventy:prod sass:prod",
     "sass:dev": "sass --load-path=node_modules --watch --no-source-map --update --style=expanded assets/scss:assets/css",
     "sass:prod": "sass --load-path=node_modules --load-path=scss --no-source-map --style=compressed assets/scss:assets/css",
     "sass:lint": "stylelint assets/scss/**/*.scss",
     "sass:lint:fix": "stylelint assets/scss/**/*.scss --fix",
-    "start": "npm-run-all --parallel pug:dev sass:dev browser-sync"
+    "start": "npm-run-all --parallel eleventy:dev sass:dev"
   },
-  "devDependencies": {
-    "browser-sync": "^2.27.10",
+  "dependencies": {
+    "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
     "del-cli": "^5.0.0",
-    "js-beautify": "^1.14.6",
+    "html-minifier": "^4.0.0",
+    "moment": "^2.29.4",
     "npm-run-all": "^4.1.5",
-    "pug-cli": "^1.0.0-alpha6",
     "sass": "^1.55.0",
     "sprucecss": "^1.0.3",
     "stylelint": "^14.14.0",
