--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "start": "npm-run-all --parallel eleventy:serve sass:dev"
   },
   "dependencies": {
-    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy": "^3.0.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
-    "del-cli": "^5.1.0",
+    "@11ty/eleventy-upgrade-help": "^3.0.1",
+    "del-cli": "^6.0.0",
     "html-minifier": "^4.0.0",
     "moment": "^2.30.1",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.77.8",
-    "sprucecss": "^2.3.3",
+    "sass": "^1.83.0",
     "semistandard": "^17.0.0",
-    "stylelint": "^16.8.2",
-    "stylelint-config-sass-guidelines": "^12.0.0"
+    "sprucecss": "^2.3.3",
+    "stylelint": "^16.11.0",
+    "stylelint-config-sass-guidelines": "^12.1.0"
   }
 }
